# Neural-Network-CUDA-Library

./: .gitignore  CMakeLists.txt  README.md
lib/: global.h
lib/data_structures/dataset/: dataset.cpp  dataset.h
lib/data_structures/dataset/entry/: entry.cpp  entry.h
lib/data_structures/matrix/: matrix.cpp  matrix.cu  matrix.h  matrix_sequential.cpp
lib/dataset/: dataset.cpp  dataset.h
lib/dataset/element/: element.cpp  element.h
lib/dataset/matrix/: matrix.cpp  matrix.h
lib/datastructs/dataset/: dataset.cpp  dataset.h
lib/datastructs/dataset/element/: element.cpp  element.h
lib/datastructs/dataset/entry/: entry.cpp  entry.h
lib/datastructs/matrix/: matrix.cpp  matrix.cu  matrix.h
lib/functions/: function.cpp
lib/functions/activation_functions/: activation_functions_parallel.cu
lib/functions/loss_functions/: loss_functions_parallel.cu  loss_functions_sequential.cpp
lib/loss_functions/: loss_functions.cpp  loss_functions.h
lib/models/: model.h
lib/models/neural_network/: neural_network.cpp  neural_network.h
lib/models/neural_network/functions/: function.cpp  function.h
lib/models/neural_network/functions/activation_functions/: activation_functions.cu  activation_functions.h
lib/models/neural_network/functions/loss_functions/: loss_functions.cu  loss_functions.h
lib/models/neural_network/layers/: layer.cpp  layer.cu  layer.h  linear_layer.cpp  linear_layer.cu  linear_layer.h
lib/parameters/activation_functions/: activation_function.cpp  activation_function.cu  activation_function.h  activation_functions.cpp  activation_functions.cu  activation_functions.h
lib/parameters/loss_functions/: loss_functions.cpp  loss_functions.cu  loss_functions.h
lib/tests/: main.cpp
lib/util/: util.cpp  util.h
plotting/: loss.py  op_time.py  op_time_functions  op_time_functions.py  op_time_matrices  op_time_matrices.py  output  plotting_data.py
plotting/data/: 0_cpu.csv  0_functions_cpu.csv  0_functions_gpu.csv  0_gpu.csv  0_matrix_cpu.csv  0_matrix_gpu.csv  10_functions_cpu.csv  10_functions_gpu.csv  11_functions_cpu.csv  11_functions_gpu.csv  12_functions_cpu.csv  12_functions_gpu.csv  13_functions_cpu.csv  13_functions_gpu.csv  14_functions_cpu.csv  14_functions_gpu.csv  15_functions_cpu.csv  15_functions_gpu.csv  16_functions_cpu.csv  16_functions_gpu.csv  17_functions_cpu.csv  17_functions_gpu.csv  18_functions_cpu.csv  18_functions_gpu.csv  19_functions_cpu.csv  19_functions_gpu.csv  1_cpu.csv  1_functions_cpu.csv  1_functions_gpu.csv  1_gpu.csv  1_matrix_cpu.csv  1_matrix_gpu.csv  20_functions_cpu.csv  20_functions_gpu.csv  21_functions_cpu.csv  21_functions_gpu.csv  22_functions_cpu.csv  22_functions_gpu.csv  23_functions_cpu.csv  23_functions_gpu.csv  (+36 more)
res/: architecture.drawio  architecture_simple.drawio
tests/: activation_functions.cpp  loss_functions.cpp  main.cpp  matrix.cpp  neural_network.cpp  nn.cpp  op_time.cpp
